logs/molo.commenting.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/molo'...
Listing './lib/python3.5/site-packages/molo/commenting'...
Listing './lib/python3.5/site-packages/molo/commenting/migrations'...
Listing './lib/python3.5/site-packages/molo/commenting/templates'...
Listing './lib/python3.5/site-packages/molo/commenting/templates/admin'...
Listing './lib/python3.5/site-packages/molo/commenting/templates/comments'...
Listing './lib/python3.5/site-packages/molo/commenting/templates/notifications'...
Listing './lib/python3.5/site-packages/molo/commenting/templates/notifications/tags'...
Listing './lib/python3.5/site-packages/molo/commenting/templatetags'...
Listing './lib/python3.5/site-packages/molo/commenting/test_templates'...
Listing './lib/python3.5/site-packages/molo/commenting/tests'...
Compiling './lib/python3.5/site-packages/molo/commenting/tests/test_admin.py'...
***   File "./lib/python3.5/site-packages/molo/commenting/tests/test_admin.py", line 294
    self.mk_main2(title='main3', slug='main3', path=00010003)
                                                           ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/molo.commenting-6.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
